--- a/LógicadeProgramação/aula20-projeto/assets/css/style.css
+++ b/LógicadeProgramação/aula20-projeto/assets/css/style.css
@@ -64,7 +64,7 @@ button {
     padding: 15px;
     border-radius: 15px;
     box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.356);
-    margin: auto 20px;
+    margin: 10px 20px;
     transition-duration: all .9s;
 }
 
