--- a/exercícios/exercíciosLógicaProgramação/exercicio-09/assets/css/style.css
+++ b/exercícios/exercíciosLógicaProgramação/exercicio-09/assets/css/style.css
@@ -31,7 +31,7 @@ p {
 
 .container {
     max-width: 640px;
-    margin: 20px auto;
+    margin: 20px 20px;
     padding: 30px;
     border-radius: 14px;
     background: linear-gradient(to bottom, #180326, #380759, #590D8C);
@@ -74,4 +74,47 @@ form button:active {
 form button:hover {
     cursor: pointer;
     background-image: linear-gradient(to top, #1f552f, #018d30);
+}
+
+.calculadora {
+    width: 400px;
+}
+
+.display {
+    font-size: 2em;
+    width: 100%;
+    text-align: right;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background-color: #504058;
+    color: lightgray;
+}
+
+.display:focus {
+    border: 3px solid royalblue;
+}
+
+.btn {
+    width: 100%;
+    height: 50px;
+    font-size: 1.3rem;
+    border:none;
+    background:#83808056;
+    color: orange;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all .5s;
+}
+
+.btn:hover {
+    background-color: #222;
+    color: orangered;
+}
+
+.btn:active {
+    color: white;
+}
+
+.btn-eq {
+    background-color: royalblue;
 }
