--- a/Javascript Tooling ES6/aula04-CpfGenerator/src/assets/css/style.css
+++ b/Javascript Tooling ES6/aula04-CpfGenerator/src/assets/css/style.css
@@ -75,3 +75,16 @@ form button:hover {
     cursor: pointer;
     background-image: linear-gradient(to top, #1f552f, #018d30);
 }
+
+.container {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.cpf-gerado{
+    font-size: 2em;
+    color: wheat;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 40px;
+}
