--- a/node/aula12/frontend/assets/css/style.css
+++ b/node/aula12/frontend/assets/css/style.css
@@ -32,7 +32,7 @@ p {
 .container {
     max-width: 640px;
     margin: 20px auto;
-    padding: 30px;
+    padding: 30px 30px;
     border-radius: 14px;
     background: linear-gradient(to bottom, #180326, #380759, #590D8C);
 }
