get finish middlewares

--- a/node/aula13/src/views/index.ejs
+++ b/node/aula13/src/views/index.ejs
@@ -9,7 +9,11 @@
 
     <section class="container">
         <h1>Aqui é um card que irá revelar uma ação programada</h1>
-        <p>Seja bem vindo ao MisteryCard onde você vai experienciar um gostinho do poder da programação, nesse simples website. Aqui nós iremos tratar os dados de maneira intencional, à praticar os exercícios a fim de memorizar conceitos do JavaScript! Sinta-se à vontade para testar e se divertir aprendendo.</p>
+        <form action="/" method="post">
+            <label>Cliente</label>
+            <input type="text" name="cliente">
+            <button>Submit</button>
+        </form>
 
     </section>
 
