--- a/html simples/assets/css/simples.css
+++ b/html simples/assets/css/simples.css
@@ -1,7 +1,201 @@
-h1 {
-    font-family: 'Times New Roman', Times, serif;
+body {
+    background-color: black;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
-body {
-    background-color: #222;
+.cabecalho {
+    width: 100%; 
+}
+
+.cabecalho .ca-flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    
+}
+
+
+.cabecalho .ca-flex .logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 20px;
+    width: 150px;
+}
+
+.cabecalho .ca-flex .logo img{
+    width: 50px;
+    height: 50px;
+}
+
+
+.cabecalho .ca-flex .logo h3 {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    width: 50px;
+    font-size: 20px;
+    font-weight: 200;
+    letter-spacing: 3px;
+}
+
+.cabecalho .ca-flex .links{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 400px;
+    padding-right: 20px;
+}
+
+
+.cabecalho .ca-flex .links .link {
+    color: white;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    transition: all .5s;
+}
+
+.cabecalho .ca-flex .links .link.animacao:hover{
+    color: pink;
+    transform: scale(1.1);
+    background-image: linear-gradient(90deg, #6b2fb3 0%, rgb(172, 19, 139));
+    padding: 12px;
+    border-radius: 10px;
+}
+
+
+.cabecalho .ca-flex .links .link.contato {
+    color: black;
+    font-weight: bold;
+    padding: 15px;
+    border-radius: 10px;
+    background-image: linear-gradient(90deg, #6b2fb3 0%, rgb(172, 19, 139));
+
+    transition: all .7s;
+}
+
+
+.cabecalho .ca-flex .links .link.contato:hover {
+    background-image: linear-gradient(90deg, rgb(172, 19, 139), #6b2fb3 0%);
+    color: white;
+    transform: scale(1.1);
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .section-conteudo {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+main .section-conteudo .texto {
+    width: 50%;
+    height: 100%;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+main .section-conteudo .texto .texto-flex {
+    padding: 40px 30px 10px 30px;
+    background-color: #2222225c;
+    text-align: center;
+    width: 80%;
+    height: 200px;
+    backdrop-filter: blur(7px);
+    border-radius: 20px;
+}
+
+main .section-conteudo .texto .texto-flex h1 {
+    width: 100%;
+    color: gainsboro;
+    letter-spacing: 3px;
+    font-weight: 400;
+    text-align: center;
+}
+
+main .section-conteudo .texto .texto-flex p {
+    width: 100%;
+    line-height: 1.5;
+    text-align: justify;
+    font-weight: 100;
+}
+
+
+
+@media screen and (max-width:600px){
+    body {
+        background-color: black;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    .cabecalho {
+        width: 100%; 
+    }
+    
+    .cabecalho .ca-flex{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        
+    }
+    
+    
+    .cabecalho .ca-flex .logo {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-left: 20px;
+        width: 150px;
+    }
+    
+    .cabecalho .ca-flex .logo img{
+        width: 50px;
+        height: 50px;
+    }
+    
+    
+    .cabecalho .ca-flex .logo h3 {
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        width: 50px;
+        font-size: 20px;
+        font-weight: 200;
+        letter-spacing: 3px;
+    }
+    
+    .cabecalho .ca-flex .links{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 300px;
+    }
 }
