--- a/node/aula17/src/views/index.ejs
+++ b/node/aula17/src/views/index.ejs
@@ -1,17 +1,16 @@
-<%- include('head.ejs'); %>
-
-<body>
+<%- include('includes/head'); %>
 
     <section class="container">
-        <h1>Aqui é um card que irá revelar uma ação programada</h1>
+        <h1>
+            <%= csrfToken %>
+        </h1>
+
         <form action="/" method="post">
-            <input type="hidden" name="_crsf" value="<%= crsfToken %>">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <label>Cliente</label>
             <input type="text" name="cliente">
             <button>Submit</button>
         </form>
-
     </section>
 
-    <script src="assets/js/bundle.js"></script>
-</body>
+<%- include('includes/footer'); %>
