--- a/projetoagenda/frontend/assets/css/style.css
+++ b/projetoagenda/frontend/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 :root {
     --bg-color-gradient: linear-gradient(to 45deg, #38184C, #45214A, #323050);
@@ -76,4 +76,4 @@ form button:active {
 form button:hover {
     cursor: pointer;
     background-image: linear-gradient(to top, #1f552f, #018d30);
-}
+} */
