--- a/projetoagenda/src/views/index.ejs
+++ b/projetoagenda/src/views/index.ejs
@@ -1,16 +1,16 @@
-<%- include('includes/head'); %>
+<%- include('includes/head') %>
+<%- include('includes/nav')  %>
+    
+<div class="container">
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8 my-5">
+            <h1 class="display-1 text-center">Error 404!</h1>
+            <p>A pagina que vocÊ procura não existe.</p>
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+</div>
 
-    <section class="container">
-        <h1>
-            <%= csrfToken %>
-        </h1>
 
-        <form action="/" method="post">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <label>Cliente</label>
-            <input type="text" name="cliente">
-            <button>Submit</button>
-        </form>
-    </section>
-
-<%- include('includes/footer'); %>
+<%- include('includes/footer') %>
