--- a/projetoagenda/src/views/index.ejs
+++ b/projetoagenda/src/views/index.ejs
@@ -4,9 +4,49 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-2"></div>
-        <div class="col-lg-8 my-5">
-            <h1 class="display-1 text-center">Error 404!</h1>
-            <p>A pagina que vocÊ procura não existe.</p>
+
+        <div class="col-lg-8 my-3">
+            <h1 class="text-center">Agenda</h1>
+            <p class="texte-center lead">Seus contatos estão abaixo</p>
+
+            <div class="row">
+                <div class="col">
+                    <div class="alert alert-danger">Um erro qualquer</div>
+                </div>
+            </div>
+
+            <div class="responsive-table">
+                <div class="table">
+                    <tr>
+                        <td>Fellipe</td>
+                        <td>Reis</td>
+                        <td>119736282738</td>
+                        <td>reisfelliepe11@gmail.com</td>
+                    </tr>
+                    
+                    <tr>
+                        <td>Poolew/td>
+                        <td>Reis</td>
+                        <td>119736282738</td>
+                        <td>reisfelliepe11@gmail.com</td>
+                    </tr>
+                    
+                    <tr>
+                        <td>Fellipe</td>
+                        <td>Reis</td>
+                        <td>119736282738</td>
+                        <td>reisfelliepe11@gmail.com</td>
+                    </tr>
+                    
+                    <tr>
+                        <td>Fellipe</td>
+                        <td>Reis</td>
+                        <td>119736282738</td>
+                        <td>reisfelliepe11@gmail.com</td>
+                    </tr>
+                </div>
+            </div>
+            
         </div>
         <div class="col-lg-2"></div>
     </div>
