--- a/projetoagenda/src/views/login.ejs
+++ b/projetoagenda/src/views/login.ejs
@@ -6,7 +6,7 @@
         <div class="col-lg-2"></div>
 
         <div class="col-lg-8 my-3">
-            <h1 class="text-center">Agenda</h1>
+            <h1 class="text-center">Login</h1>
             <p class="texte-center lead">Seus contatos estão abaixo</p>
 
             <div class="row">
